# ghostpad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
app/: Cargo.toml
app/qml/: Main.qml  Theme.qml
app/resources/: dev.ghostpad.GhostPad.desktop
app/src/: main.rs
core/: Cargo.toml
core/src/: app_info.rs  document.rs  document_manager.rs  file_watcher.rs  lib.rs  welcome.rs
docs/: README.md
docs/advisories/: accepted.md  resolved.md
docs/getting-started/: build.md  configuration.md  installation.md
docs/guides/: kde-integration.md  keyboard-shortcuts.md  theming.md
docs/internals/: architecture.md
docs/reference/: settings.md
packaging/: dev.ghostpad.GhostPad.desktop  dev.ghostpad.GhostPad.metainfo.xml
packaging/arch/: PKGBUILD
ui_bridge/: .qmlls.ini  Cargo.toml  build.rs
ui_bridge/src/: bridge.rs  kwin_blur.cpp  kwin_blur.h  lib.rs
