[package]
name = "ghostpad-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[lib]
name = "ghostpad_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
regex = "1"
notify = "8"

[lints]
workspace = true
